--- a/api/api.csproj
+++ b/api/api.csproj
@@ -6,5 +6,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.8"/>
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0"/>
   </ItemGroup>
-  
+   <ItemGroup>
+    <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
