--- a/api/api.csproj
+++ b/api/api.csproj
@@ -5,8 +5,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.8"/>
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.8"/>
   </ItemGroup>
-   <ItemGroup>
-    <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
+  <ItemGroup>
+    <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 </Project>
