--- a/api/api.csproj
+++ b/api/api.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8"/>
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest"/>
