--- a/api.csproj
+++ b/api.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.8"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest"/>
